# hyperion

./: .oxfmtrc.json  components.json  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/: .release-please-manifest.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.d.ts  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  settings.json  svelte.json
src-tauri/src/: api.rs  commands.rs  error.rs  json.rs  lib.rs  log.rs  server.rs  ws.rs
src-tauri/src/eventsub/: client.rs  mod.rs
src-tauri/src/irc/: error.rs  mod.rs  websocket.rs
src-tauri/src/irc/client/: event_loop.rs  mod.rs  pool_connection.rs
src-tauri/src/irc/connection/: event_loop.rs  mod.rs
src-tauri/src/irc/message/: commands.rs  mod.rs  tags.rs
src-tauri/src/pubsub/: client.rs  mod.rs
src-tauri/src/seventv/: client.rs  mod.rs
src/lib/: app.svelte.ts  completer.svelte.ts  emotes.ts  history.svelte.ts  settings.ts  split-layout.svelte.ts  split-layout.ts  stores.ts  util.ts
src/lib/commands/: util.ts
src/lib/commands/built-in/: block-term.ts  founders.ts  hide-pin.ts  join.ts  reload-badges.ts  reload-cheermotes.ts  reload-emotes.ts  reload-theme.ts  show-pin.ts  unpin.ts
src/lib/commands/twitch/: ban.ts  block-term.ts  block.ts  founders.ts  hide-pin.ts  hide-poll.ts  hide-prediction.ts  marker.ts  mod.ts  mods.ts  pin.ts  poll-end.ts  poll.ts  prediction-cancel.ts  prediction-lock.ts  prediction.ts  raid.ts  show-pin.ts  show-poll.ts  show-prediction.ts  timeout.ts  unban.ts  unblock.ts  unmod.ts  unpin.ts  unraid.ts  unvip.ts  vip.ts  vips.ts  warn.ts
src/lib/components/: Channel.svelte  ChannelList.svelte  ChannelListItem.svelte  Draggable.svelte  DraggableChannel.svelte  Droppable.svelte  Emote.svelte  EmotePicker.svelte  GuestList.svelte  JoinDialog.svelte  Poll.svelte  Sidebar.svelte  Sortable.svelte  StreamHeader.svelte  StreamInfo.svelte  StreamTooltip.svelte  Suggestions.svelte  Timestamp.svelte  TitleBar.svelte  User.svelte
src/lib/components/channel/: Channel.svelte  ChannelList.svelte  ChannelListItem.svelte
src/lib/components/chat/: Chat.svelte  ChatError.svelte  ChatInput.svelte  ChatSeparator.svelte  Input.svelte  LiveNotices.svelte  NoticeAction.svelte  Pin.svelte  PinDurationDialog.svelte  Pinned.svelte  Poll.svelte  PollDialog.svelte  Prediction.svelte  PredictionDialog.svelte  ReplyBanner.svelte  Restrictions.svelte  Separator.svelte
src/lib/components/emote-picker/: Browser.svelte  EmotePicker.svelte  Results.svelte
src/lib/components/message/: AutoMod.svelte  Badges.svelte  Content.svelte  Embed.svelte  Event.svelte  Highlight.svelte  Message.svelte  Notification.svelte  QuickActions.svelte  Redemption.svelte  Sub.svelte  SystemMessage.svelte  UserMessage.svelte
src/lib/components/split/: SplitHeader.svelte  SplitNode.svelte  SplitView.svelte  Tab.svelte  TabBar.svelte
src/lib/components/stream/: GuestList.svelte  StreamInfo.svelte  StreamTooltip.svelte
src/lib/components/ui/: Button.svelte  Checkbox.svelte  ColorPicker.svelte  Dialog.svelte  Input.svelte  Label.svelte  Popover.svelte  Progress.svelte  Separator.svelte  Slider.svelte  Switch.svelte  Tooltip.svelte
src/lib/errors/: api-error.ts
src/lib/graphql/: index.ts  twitch.ts
src/lib/handlers/: helper.ts  index.ts
src/lib/handlers/eventsub/: automod-message-hold.ts  automod-message-update.ts  channel-channel-points-automatic-reward-redemption-add.ts  channel-channel-points-custom-reward-add.ts  channel-chat-user-message-hold.ts  channel-chat-user-message-update.ts  channel-moderate.ts  channel-poll-begin.ts  channel-poll-end.ts  channel-poll-progress.ts  channel-prediction-begin.ts  channel-prediction-end.ts  channel-prediction-lock.ts  channel-prediction-progress.ts  channel-subscription-end.ts  channel-suspicious-user-message.ts  channel-suspicious-user-update.ts  channel-unban-request-create.ts  channel-unban-request-resolve.ts  channel-warning-acknowledge.ts  stream-offline.ts  stream-online.ts
src/lib/handlers/irc/: clearchat.ts  clearmsg.ts  join.ts  (+3 more)
src/lib/hooks/: use-sidebar.svelte.ts
src/lib/managers/: badge-manager.ts  channel-emote-manager.ts  emote-manager.ts  redemption-manager.svelte.ts  redemption-manager.ts  user-manager.ts
src/lib/menus/: channel-menu.ts  message-menu.ts
src/lib/models/: badge.ts  channel.svelte.ts  chat.svelte.ts  current-user.svelte.ts  pin.svelte.ts  poll.svelte.ts  prediction.svelte.ts  stream.svelte.ts  user.svelte.ts
src/lib/splits/: controller.svelte.ts  events.ts  geometry.ts  split-controller.svelte.ts  split-tree.ts  tree.ts  types.ts
src/lib/twitch/: api.ts  auth.ts  client.ts  eventsub.ts  index.ts  irc.ts  pubsub.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(main)/: +error.svelte  +layout.svelte  +page.svelte
src/routes/auth/: +layout.svelte
src/routes/settings/: +page.svelte  FieldControl.svelte  SidebarActions.svelte  types.ts
src/styles/: app.css  dialog.css  popover.css  tooltip.css
(+96 files in other folders)
