[package]
name = "hyperion"
version = "0.2.1"
authors = ["Oliver Rose <hello@olivermrose.com>"]
edition = "2024"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
debug = false
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-cache = "0.1.5"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-svelte = "3"

anyhow = "1.0.97"
either = "1.15.0"
futures = "0.3.31"
httparse = "1.10.1"
mimalloc = "0.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rustls = { version = "0.23.25", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.37.2"
thiserror = "2.0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1.44.2", features = ["macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
twitch_api = { version = "0.7.2", features = ["beta", "client", "helix", "eventsub", "reqwest"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
