[package]
name = "hyperion"
version = "0.5.1"
authors = ["Oliver Rose <hello@olivermrose.com>"]
edition = "2024"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
debug = false
incremental = true

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [] }

[dependencies]
anyhow = "1.0.97"
either = "1.15.0"
futures = "0.3.31"
mimalloc = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
rustls = { version = "0.23.25", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.37.2"
thiserror = "2.0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", default-features = false, features = [
	"cef",
	"protocol-asset",
] }
tauri-plugin-cache = "0.1.5"
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-svelte = { version = "3", features = ["preserve-order"] }
tokio = { version = "1.44.2", features = ["macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
twitch_api = { version = "0.7.2", features = ["beta", "client", "helix", "eventsub", "reqwest"] }
keyring = "4.1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef", features = [
	"deep-link",
] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
